mobile nav overflow fix

--- a/src/components/Example/_example.scss
+++ b/src/components/Example/_example.scss
@@ -30,8 +30,10 @@
     }
   }
   &__content {
-    display: none;
-
+    // display: none;
+    height: 0;
+    opacity: 0;
+    transition: height 0.2s forward, opacity 0.2s forward;
     &-heading {
       width: 60%;
       margin: auto;
@@ -127,6 +129,23 @@
     transform: rotate(-180deg);
   }
   .example__content {
-    display: block;
+    // display: block;
+    height: 100%;
+    opacity: 1;
   }
 }
+
+@keyframes slideInDown {
+  from {
+    transform: translate3d(0, -100%, 0);
+    visibility: visible;
+  }
+
+  to {
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+// .slideInDown {
+//   animation: 1s slideInDown;
+// }
